Binding Panel - fix scrollbar issue with abs positioned edit view.

--- a/js/panels/binding-panel.reel/binding-panel.css
+++ b/js/panels/binding-panel.reel/binding-panel.css
@@ -8,6 +8,7 @@
     position: relative;
     height: 100%;
     display: -webkit-box;
+    overflow: hidden;
     -webkit-box-orient: vertical;
 }
 
